--- a/MysqlPot/MysqlPot.csproj
+++ b/MysqlPot/MysqlPot.csproj
@@ -38,6 +38,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
@@ -56,5 +57,6 @@
     <None Include="mysql.build" />
     <None Include="config.txt" />
     <None Include="INSTALL.txt" />
+    <None Include="MysqlPot.exe.config" />
   </ItemGroup>
 </Project>
