moved token and username defaults to config file

--- a/MysqlPot/MysqlPot.exe.config
+++ b/MysqlPot/MysqlPot.exe.config
@@ -6,5 +6,7 @@
     <add key="mysql.host" value="software-schrubber.de" />
     <add key="mysql.log" value="/Users/42/mysqlpot.log" />
     <add key="server.postAlertsURL" value="https://www.t-sec-radar.de:9443/ews-0.1/alert/postSimpleMessage" />
+    <add key="server.username" value="MYSQL-EMAILPLACE" />
+    <add key="server.token" value="blah" />
 </appSettings>
 </configuration>
