added blah config

--- a/MysqlPot/MysqlPot.exe.config
+++ b/MysqlPot/MysqlPot.exe.config
@@ -3,10 +3,10 @@
 <appSettings>
     <add key="mysql.port" value="3306" />
     <add key="mysql.ip" value="127.0.0.1" />
-    <add key="mysql.host" value="software-schrubber.de" />
-    <add key="mysql.log" value="/Users/42/mysqlpot.log" />
+    <add key="mysql.host" value="blah" />
+    <add key="mysql.log" value="/opt/mysqlpot.log" />
     <add key="server.postAlertsURL" value="https://www.t-sec-radar.de:9443/ews-0.1/alert/postSimpleMessage" />
-    <add key="server.username" value="MYSQL-EMAILPLACE" />
+    <add key="server.username" value="blah" />
     <add key="server.token" value="blah" />
 </appSettings>
 </configuration>
